@@ -40,11 +40,11 @@ with the
 .I "+/-r"
 option.
 If given as
-.I -r,
-The curvature is downward (which is the usual configuration).
-If the option is given as
 .I +r,
-then the curvature is upward.
+The curvature is upward (which is the usual configuration).
+If the option is given as
+.I -r,
+then the curvature is downward.
 The radius indicates how far from each slat its effective
 cylindrical center resides.
 Each slat will be broken into as many polygons as is necessary to
